--- a/x86/OpenWrt_x86.config
+++ b/x86/OpenWrt_x86.config
@@ -229,7 +229,7 @@ CONFIG_QCOW2_IMAGES=y
 CONFIG_VDI_IMAGES=y
 CONFIG_VMDK_IMAGES=y
 CONFIG_VHDX_IMAGES=y
-# CONFIG_TARGET_IMAGES_GZIP is not set
+CONFIG_TARGET_IMAGES_GZIP=y
 
 #
 # Image Options
