--- a/.github/workflows/OpenWrt_ARMv8.yml
+++ b/.github/workflows/OpenWrt_ARMv8.yml
@@ -185,7 +185,7 @@ jobs:
       uses: ophub/flippy-openwrt-actions@main
       env:
         OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
-        SCRIPT_REPO_URL: https://github.com/yunxi993/OpenWrt-ARMv8/tree/main/kernel
+        KERNEL_REPO_URL: https://github.com/yunxi993/OpenWrt-ARMv8/tree/main/kernel
         PACKAGE_SOC: vplus_beikeyun_l1pro_r68s_s905_s905d_s905x2_s905x3_s912_s922x_s922x-n2
         KERNEL_AUTO_LATEST:  true
         KERNEL_VERSION_NAME: 5.15.67_5.19.8
